--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 15 15:17:35 CEST 2023
-sdk.dir=/Users/andreas_antonsson/Library/Android/sdk
+#Thu May 18 06:04:27 PDT 2023
+sdk.dir=/Users/david_98/Library/Android/sdk
